--- a/static/index.html
+++ b/static/index.html
@@ -36,6 +36,7 @@
             padding: 2.5rem;
             border-radius: 20px;
             box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05);
+            margin-bottom: 1.5rem;
         }
 
         h1 {
@@ -51,6 +52,63 @@
             color: #64748b;
             margin-bottom: 2rem;
             font-size: 0.95rem;
+        }
+
+        /* 热门问题区域 */
+        #popular-questions {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 20px;
+            border-radius: 12px;
+            margin-bottom: 20px;
+            color: white;
+        }
+
+        #popular-questions h4 {
+            margin-top: 0;
+            font-size: 1.1rem;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .popular-question-item {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 12px;
+            margin: 10px 0;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .popular-question-item:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateX(5px);
+        }
+
+        .rank {
+            background: rgba(255, 255, 255, 0.3);
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+            flex-shrink: 0;
+        }
+
+        .question {
+            flex: 1;
+            font-size: 15px;
+        }
+
+        .stats {
+            font-size: 12px;
+            opacity: 0.8;
+            white-space: nowrap;
         }
 
         /* 输入区域 */
@@ -98,65 +156,63 @@
 
         .btn-group {
             display: flex;
-            gap: 12px;
+            gap: 10px;
         }
 
         button {
+            padding: 14px 26px;
             border: none;
-            padding: 12px 24px;
-            border-radius: 10px;
-            font-weight: 600;
+            border-radius: 12px;
+            font-size: 1rem;
             cursor: pointer;
             transition: all 0.2s;
-            display: flex;
-            align-items: center;
-            gap: 8px;
+            font-weight: 500;
         }
 
         #submit-btn {
-            background: var(--primary);
+            background: linear-gradient(135deg, var(--primary) 0%, #1d4ed8 100%);
             color: white;
+            box-shadow: 0 4px 14px rgba(37, 99, 235, 0.3);
         }
 
-        #submit-btn:hover {
-            background: #1d4ed8;
-            transform: translateY(-1px);
+        #submit-btn:hover:not(:disabled) {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(37, 99, 235, 0.4);
         }
 
         #submit-btn:disabled {
-            opacity: 0.6;
+            background: #94a3b8;
             cursor: not-allowed;
             transform: none;
         }
 
         #reset-btn {
             background: #f1f5f9;
-            color: #475569;
+            color: #64748b;
         }
 
         #reset-btn:hover {
             background: #e2e8f0;
         }
 
-        /* 结果展示区 */
+        /* 响应区域 */
         #response-area {
-            margin-top: 2rem;
-            border-top: 2px solid #f1f5f9;
-            padding-top: 2rem;
             display: none;
+            margin-top: 2rem;
         }
 
         .badge-container {
             display: flex;
             gap: 10px;
-            margin-bottom: 1.2rem;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
         }
 
         .badge {
-            font-size: 0.75rem;
-            padding: 6px 14px;
-            border-radius: 999px;
-            font-weight: 600;
+            padding: 8px 14px;
+            border-radius: 8px;
+            font-size: 0.9rem;
+            font-weight: 500;
         }
 
         .sources-badge {
@@ -165,36 +221,49 @@
         }
 
         .score-badge {
-            background: #fef3c7;
-            color: #92400e;
+            background: #dcfce7;
+            color: #15803d;
         }
 
         .score-high {
-            background: #dcfce7;
-            color: #166534;
+            background: linear-gradient(135deg, #a7f3d0 0%, #6ee7b7 100%);
+            color: #047857;
         }
 
-        /* Markdown 样式微调 */
+        .cache-badge {
+            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            color: white;
+        }
+
         .answer-box {
-            background: #ffffff;
-            border: 1px solid var(--border);
+            background: #f8fafc;
             padding: 2rem;
-            border-radius: 14px;
-            color: #334155;
+            border-radius: 12px;
+            line-height: 1.8;
         }
 
-        .answer-box h2 {
-            font-size: 1.3rem;
-            margin-top: 1.5rem;
-            border-bottom: 1px solid #f1f5f9;
-            padding-bottom: 0.5rem;
+        .answer-box p {
+            margin-bottom: 1rem;
+        }
+
+        .answer-box ul,
+        .answer-box ol {
+            padding-left: 1.5rem;
         }
 
         .answer-box code {
-            background: #f1f5f9;
-            padding: 2px 5px;
+            background: #e2e8f0;
+            padding: 2px 6px;
             border-radius: 4px;
-            font-size: 0.9em;
+            font-size: 0.95em;
+        }
+
+        .answer-box pre {
+            background: #1e293b;
+            color: #e2e8f0;
+            padding: 1rem;
+            border-radius: 8px;
+            overflow-x: auto;
         }
 
         .answer-box img {
@@ -216,11 +285,146 @@
             padding: 10px;
             text-align: left;
         }
+
+        /* 缓存确认对话框 */
+        .confirmation-dialog {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.7);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            animation: fadeIn 0.3s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        .dialog-content {
+            background: white;
+            padding: 30px;
+            border-radius: 16px;
+            max-width: 600px;
+            width: 90%;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            animation: slideUp 0.3s ease-out;
+        }
+
+        @keyframes slideUp {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .dialog-content h3 {
+            margin-top: 0;
+            color: var(--primary);
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .similarity-info {
+            text-align: center;
+            font-size: 14px;
+            color: #666;
+            margin-bottom: 20px;
+            padding: 10px;
+            background: #f8fafc;
+            border-radius: 8px;
+        }
+
+        .question-compare {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        .your-question,
+        .cached-question {
+            padding: 15px;
+            border-radius: 8px;
+            background: #f5f5f5;
+        }
+
+        .your-question strong {
+            color: #667eea;
+        }
+
+        .cached-question strong {
+            color: #764ba2;
+        }
+
+        .dialog-buttons {
+            display: flex;
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .btn-confirm,
+        .btn-reject {
+            flex: 1;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            font-size: 15px;
+            cursor: pointer;
+            transition: all 0.3s;
+            font-weight: 500;
+        }
+
+        .btn-confirm {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+        }
+
+        .btn-confirm:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+        }
+
+        .btn-reject {
+            background: #f0f0f0;
+            color: #333;
+        }
+
+        .btn-reject:hover {
+            background: #e0e0e0;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
+        <!-- 热门问题卡片 -->
+        <div class="card" id="popular-card">
+            <div id="popular-questions">
+                <h4>🔥 热门问题 Top 3</h4>
+                <div id="popular-list">
+                    <div style="text-align: center; opacity: 0.7; padding: 20px;">加载中...</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 主查询卡片 -->
         <div class="card">
             <h1>📖 AI 知识助手</h1>
             <p class="subtitle">专注于 AI Pipeline 架构与数据存储技术的专业解答。</p>
@@ -249,6 +453,7 @@
                 <div class="badge-container">
                     <div id="sources-info" class="badge sources-badge"></div>
                     <div id="score-info" class="badge score-badge"></div>
+                    <div id="cache-info" class="badge cache-badge" style="display: none;"></div>
                 </div>
                 <div id="answer-content" class="answer-box"></div>
             </div>
@@ -256,6 +461,48 @@
     </div>
 
     <script>
+        // 全局变量：存储session_id
+        let sessionId = `session_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
+
+        // 页面加载时获取热门问题
+        async function loadPopularQuestions() {
+            try {
+                const response = await fetch('/cache/popular');
+                const data = await response.json();
+
+                const listEl = document.getElementById('popular-list');
+
+                if (!data.popular_questions || data.popular_questions.length === 0) {
+                    listEl.innerHTML = '<div style="text-align: center; opacity: 0.7; padding: 20px;">暂无热门问题</div>';
+                    return;
+                }
+
+                listEl.innerHTML = '';
+                data.popular_questions.forEach((item, index) => {
+                    const questionDiv = document.createElement('div');
+                    questionDiv.className = 'popular-question-item';
+                    questionDiv.innerHTML = `
+                        <span class="rank">${index + 1}</span>
+                        <span class="question">${item.question}</span>
+                        <span class="stats">
+                            ${item.count}次
+                            ${item.similar_count > 0 ? `(+${item.similar_count}相似)` : ''}
+                        </span>
+                    `;
+                    questionDiv.onclick = () => fillQuestion(item.question);
+                    listEl.appendChild(questionDiv);
+                });
+            } catch (error) {
+                console.error('[Error] 加载热门问题失败:', error);
+            }
+        }
+
+        // 点击热门问题填充到输入框
+        function fillQuestion(question) {
+            document.getElementById('question').value = question;
+            document.getElementById('question').focus();
+        }
+
         // 重新开始逻辑
         function resetPage() {
             console.log("[UI] 执行页面重置...");
@@ -264,8 +511,130 @@
             document.getElementById('question').focus();
         }
 
+        // 显示缓存确认对话框
+        function showConfirmationDialog(data) {
+            const currentQuestion = document.getElementById('question').value.trim();
+
+            const dialog = document.createElement('div');
+            dialog.className = 'confirmation-dialog';
+            dialog.innerHTML = `
+                <div class="dialog-content">
+                    <h3>🤔 发现相似问题</h3>
+                    <p class="similarity-info">相似度: ${data.similarity}</p>
+                    <div class="question-compare">
+                        <div class="your-question">
+                            <strong>您的问题：</strong>
+                            <p>${currentQuestion}</p>
+                        </div>
+                        <div class="cached-question">
+                            <strong>相似问题：</strong>
+                            <p>${data.cached_question}</p>
+                        </div>
+                    </div>
+                    <p style="text-align: center; color: #666;">${data.message}</p>
+                    <div class="dialog-buttons">
+                        <button class="btn-confirm" onclick="handleCacheConfirm('${data.confirmation_id}', true)">
+                            ✅ 是同一问题，使用缓存
+                        </button>
+                        <button class="btn-reject" onclick="handleCacheConfirm('${data.confirmation_id}', false)">
+                            ❌ 不同问题，重新检索
+                        </button>
+                    </div>
+                </div>
+            `;
+            document.body.appendChild(dialog);
+        }
+
+        // 处理用户确认
+        async function handleCacheConfirm(confirmationId, userConfirmed) {
+            // 关闭对话框
+            const dialog = document.querySelector('.confirmation-dialog');
+            if (dialog) {
+                dialog.remove();
+            }
+
+            const btn = document.getElementById('submit-btn');
+            btn.disabled = true;
+            btn.innerText = "处理中...";
+
+            try {
+                const response = await fetch('/cache/confirm', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        confirmation_id: confirmationId,
+                        user_confirmed: userConfirmed
+                    })
+                });
+
+                const data = await response.json();
+
+                if (data.need_requery) {
+                    // 用户拒绝使用缓存，重新查询
+                    console.log('[Cache] 用户拒绝缓存，重新检索...');
+                    await askQuestion(true);  // 传递true表示跳过缓存
+                } else if (data.answer) {
+                    // 用户确认使用缓存
+                    console.log('[Cache] 用户确认使用缓存答案');
+                    displayAnswer(data, true);
+                    loadPopularQuestions();  // 刷新热门问题
+                }
+            } catch (error) {
+                console.error('[Error] 确认请求失败:', error);
+                alert('确认失败，请重新提问');
+            } finally {
+                btn.disabled = false;
+                btn.innerText = "🚀 发送提问";
+            }
+        }
+
+        // 显示答案
+        function displayAnswer(data, isFromCache = false) {
+            // 显示结果区域
+            document.getElementById('response-area').style.display = 'block';
+
+            // 更新 Badge 信息
+            const useQueryEnhancement = document.getElementById('use-query-enhancement').checked;
+            const useRerank = document.getElementById('use-rerank').checked;
+
+            const modes = [];
+            if (useQueryEnhancement) modes.push("查询增强");
+            if (useRerank) modes.push("深度精排");
+            const modeStr = modes.length > 0 ? modes.join(" + ") : "基础检索";
+
+            const sourcesInfo = document.getElementById('sources-info');
+            if (isFromCache) {
+                sourcesInfo.innerText = `⚡ 缓存命中`;
+            } else {
+                sourcesInfo.innerText = `📚 检索到 ${data.sources_count} 个相关片段 | ${modeStr}`;
+            }
+
+            const scoreInfo = document.getElementById('score-info');
+            scoreInfo.innerText = `🎯 最高相关度: ${data.best_score}`;
+
+            // 根据分数调整颜色
+            const scoreValue = parseFloat(data.best_score);
+            scoreInfo.className = "badge score-badge";
+            if (scoreValue > 80) scoreInfo.classList.add('score-high');
+
+            // 缓存标记
+            const cacheInfo = document.getElementById('cache-info');
+            if (data.metadata && data.metadata.from_cache) {
+                cacheInfo.style.display = 'block';
+                cacheInfo.innerText = `⚡ 来自缓存 (${data.metadata.similarity})`;
+            } else if (isFromCache) {
+                cacheInfo.style.display = 'block';
+                cacheInfo.innerText = `⚡ 来自缓存`;
+            } else {
+                cacheInfo.style.display = 'none';
+            }
+
+            // 渲染 Markdown 答案
+            document.getElementById('answer-content').innerHTML = marked.parse(data.answer);
+        }
+
         // 提问逻辑
-        async function askQuestion() {
+        async function askQuestion(skipCache = false) {
             const questionEl = document.getElementById('question');
             const btn = document.getElementById('submit-btn');
             const useRerank = document.getElementById('use-rerank').checked;
@@ -289,7 +658,8 @@
                     body: JSON.stringify({
                         prompt: prompt,
                         use_rerank: useRerank,
-                        use_query_enhancement: useQueryEnhancement
+                        use_query_enhancement: useQueryEnhancement,
+                        session_id: sessionId
                     })
                 });
 
@@ -301,26 +671,19 @@
                 console.log("[Response] 收到后端响应:", data);
                 console.log(`[Time] 耗时: ${duration}s`);
 
-                // 显示结果区域
-                document.getElementById('response-area').style.display = 'block';
+                // 情况1: 需要用户确认
+                if (data.need_confirmation) {
+                    showConfirmationDialog(data);
+                    btn.disabled = false;
+                    btn.innerText = "🚀 发送提问";
+                    return;
+                }
 
-                // 更新 Badge 信息
-                const modes = [];
-                if (useQueryEnhancement) modes.push("查询增强");
-                if (useRerank) modes.push("深度精排");
-                const modeStr = modes.length > 0 ? modes.join(" + ") : "基础检索";
-                document.getElementById('sources-info').innerText = `📚 检索到 ${data.sources_count} 个相关片段 | ${modeStr}`;
+                // 情况2: 直接返回答案（可能来自缓存或新生成）
+                displayAnswer(data);
 
-                const scoreInfo = document.getElementById('score-info');
-                scoreInfo.innerText = `🎯 最高相关度: ${data.best_score}`;
-
-                // 根据分数调整颜色 (假设分数格式为 "85.5%")
-                const scoreValue = parseFloat(data.best_score);
-                scoreInfo.className = "badge score-badge";
-                if (scoreValue > 80) scoreInfo.classList.add('score-high');
-
-                // 渲染 Markdown 答案
-                document.getElementById('answer-content').innerHTML = marked.parse(data.answer);
+                // 刷新热门问题
+                loadPopularQuestions();
 
             } catch (error) {
                 console.error("[Error] 请求失败:", error);
@@ -339,7 +702,14 @@
             }
         });
 
-        console.log("[System] 前端初始化完成。");
+        // 页面加载完成
+        window.addEventListener('DOMContentLoaded', () => {
+            console.log("[System] 前端初始化完成。");
+            loadPopularQuestions();
+
+            // 每30秒刷新热门问题
+            setInterval(loadPopularQuestions, 30000);
+        });
     </script>
 </body>
 
